--- a/generated-application/package.json
+++ b/generated-application/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "mongoose": "^5.1.2",
     "morgan": "~1.9.0",
     "session-file-store": "^1.2.0"
   }
