--- a/app-loopback/server/model-config.json
+++ b/app-loopback/server/model-config.json
@@ -46,5 +46,9 @@
   "leaders": {
     "dataSource": "MongoDB",
     "public": true
+  },
+  "Customer": {
+    "dataSource": "MongoDB",
+    "public": true
   }
 }
