--- a/app-loopback/server/model-config.json
+++ b/app-loopback/server/model-config.json
@@ -50,5 +50,9 @@
   "Customer": {
     "dataSource": "MongoDB",
     "public": true
+  },
+  "Comments": {
+    "dataSource": "MongoDB",
+    "public": true
   }
 }
