Add Favorites model

--- a/app-loopback/server/model-config.json
+++ b/app-loopback/server/model-config.json
@@ -54,5 +54,9 @@
   "Comments": {
     "dataSource": "MongoDB",
     "public": true
+  },
+  "Favorites": {
+    "dataSource": "MongoDB",
+    "public": true
   }
 }
