--- a/graphql-app/package.json
+++ b/graphql-app/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-link-http": "^1.5.4",
+    "graphql-binding": "^2.1.1",
     "graphql-import": "^0.6.0",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^3.0.4",
