--- a/graphql-app/package.json
+++ b/graphql-app/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "apollo-link-http": "^1.5.4",
+    "bcrypt": "^3.0.0",
     "graphql-binding": "^2.1.1",
     "graphql-import": "^0.6.0",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^3.0.4",
     "graphql-yoga": "^1.14.12",
+    "jsonwebtoken": "^8.3.0",
     "node-fetch": "^2.1.2",
     "prisma": "^1.10.2",
     "prisma-binding": "^2.1.0"
